# rust-compiler

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SLIDES.md  code_slide.md  example.rs
docs/: architecture.md  lexer.md  parser.md
src/: ast.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  token.h
tests/: lexer_test.cc  parser_test.cc
